c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_labels/extra_credit/goto_cross_function.c
int foo(void) {
    label:
        return 0;
}

int main(void) {
    /* You can't goto a label in another function */
    goto label;
    return 1;
}